@@ -1,0 +1,192 @@
+<?xml version="1.0"?>
+<FreeBoBConnectionInfo>
+  <Device>
+    <NodeId>1</NodeId>
+    <Comment>Connection Information for bridgeCo AG, Switzerland , Ref-Design_Audio1 configuration</Comment>
+    <Vendor>bridgeCo AG, Switzerland </Vendor>
+    <Model>Ref-Design_Audio1</Model>
+    <GUID>0007f51000000042</GUID>
+    <ConnectionSet>
+      <Direction>1</Direction>
+      <Connection>
+        <Port>0</Port>
+        <Node>1</Node>
+        <Dimension>9</Dimension>
+        <Samplerate>48000</Samplerate>
+        <IsoChannel>-1</IsoChannel>
+        <Streams>
+          <Stream>
+            <Position>0</Position>
+            <Location>1</Location>
+            <Format>6</Format>
+            <Type>3</Type>
+            <DestinationPort>0</DestinationPort>
+            <Name>LineOut1 L</Name>
+          </Stream>
+          <Stream>
+            <Position>4</Position>
+            <Location>2</Location>
+            <Format>6</Format>
+            <Type>3</Type>
+            <DestinationPort>0</DestinationPort>
+            <Name>LineOut1 R</Name>
+          </Stream>
+          <Stream>
+            <Position>1</Position>
+            <Location>1</Location>
+            <Format>6</Format>
+            <Type>3</Type>
+            <DestinationPort>0</DestinationPort>
+            <Name>LineOut2 L</Name>
+          </Stream>
+          <Stream>
+            <Position>5</Position>
+            <Location>2</Location>
+            <Format>6</Format>
+            <Type>3</Type>
+            <DestinationPort>0</DestinationPort>
+            <Name>LineOut2 R</Name>
+          </Stream>
+          <Stream>
+            <Position>2</Position>
+            <Location>1</Location>
+            <Format>6</Format>
+            <Type>3</Type>
+            <DestinationPort>0</DestinationPort>
+            <Name>LineOut3 L</Name>
+          </Stream>
+          <Stream>
+            <Position>6</Position>
+            <Location>2</Location>
+            <Format>6</Format>
+            <Type>3</Type>
+            <DestinationPort>0</DestinationPort>
+            <Name>LineOut3 R</Name>
+          </Stream>
+          <Stream>
+            <Position>3</Position>
+            <Location>1</Location>
+            <Format>6</Format>
+            <Type>4</Type>
+            <DestinationPort>0</DestinationPort>
+            <Name>SPDIFOut L</Name>
+          </Stream>
+          <Stream>
+            <Position>7</Position>
+            <Location>2</Location>
+            <Format>6</Format>
+            <Type>4</Type>
+            <DestinationPort>0</DestinationPort>
+            <Name>SPDIFOut R</Name>
+          </Stream>
+          <Stream>
+            <Position>8</Position>
+            <Location>9</Location>
+            <Format>13</Format>
+            <Type>10</Type>
+            <DestinationPort>0</DestinationPort>
+            <Name>MidiOut 1</Name>
+          </Stream>
+        </Streams>
+      </Connection>
+    </ConnectionSet>
+    <ConnectionSet>
+      <Direction>0</Direction>
+      <Connection>
+        <Port>0</Port>
+        <Node>1</Node>
+        <Dimension>5</Dimension>
+        <Samplerate>48000</Samplerate>
+        <IsoChannel>-1</IsoChannel>
+        <Streams>
+          <Stream>
+            <Position>1</Position>
+            <Location>1</Location>
+            <Format>6</Format>
+            <Type>3</Type>
+            <DestinationPort>0</DestinationPort>
+            <Name>LineIn1 L</Name>
+          </Stream>
+          <Stream>
+            <Position>3</Position>
+            <Location>2</Location>
+            <Format>6</Format>
+            <Type>3</Type>
+            <DestinationPort>0</DestinationPort>
+            <Name>LineIn1 R</Name>
+          </Stream>
+          <Stream>
+            <Position>0</Position>
+            <Location>1</Location>
+            <Format>6</Format>
+            <Type>4</Type>
+            <DestinationPort>0</DestinationPort>
+            <Name>SPDIFIn L</Name>
+          </Stream>
+          <Stream>
+            <Position>2</Position>
+            <Location>2</Location>
+            <Format>6</Format>
+            <Type>4</Type>
+            <DestinationPort>0</DestinationPort>
+            <Name>SPDIFIn R</Name>
+          </Stream>
+          <Stream>
+            <Position>4</Position>
+            <Location>5</Location>
+            <Format>13</Format>
+            <Type>10</Type>
+            <DestinationPort>0</DestinationPort>
+            <Name>MidiIn 1</Name>
+          </Stream>
+        </Streams>
+      </Connection>
+    </ConnectionSet>
+    <StreamFormats>
+      <Direction>1</Direction>
+      <Format>
+        <Samplerate>44100</Samplerate>
+        <AudioChannels>8</AudioChannels>
+        <MidiChannels>1</MidiChannels>
+      </Format>
+      <Format>
+        <Samplerate>48000</Samplerate>
+        <AudioChannels>8</AudioChannels>
+        <MidiChannels>1</MidiChannels>
+      </Format>
+      <Format>
+        <Samplerate>88200</Samplerate>
+        <AudioChannels>8</AudioChannels>
+        <MidiChannels>1</MidiChannels>
+      </Format>
+      <Format>
+        <Samplerate>96000</Samplerate>
+        <AudioChannels>8</AudioChannels>
+        <MidiChannels>1</MidiChannels>
+      </Format>
+    </StreamFormats>
+    <StreamFormats>
+      <Direction>0</Direction>
+      <Format>
+        <Samplerate>44100</Samplerate>
+        <AudioChannels>4</AudioChannels>
+        <MidiChannels>1</MidiChannels>
+      </Format>
+      <Format>
+        <Samplerate>48000</Samplerate>
+        <AudioChannels>4</AudioChannels>
+        <MidiChannels>1</MidiChannels>
+      </Format>
+      <Format>
+        <Samplerate>88200</Samplerate>
+        <AudioChannels>4</AudioChannels>
+        <MidiChannels>1</MidiChannels>
+      </Format>
+      <Format>
+        <Samplerate>96000</Samplerate>
+        <AudioChannels>4</AudioChannels>
+        <MidiChannels>1</MidiChannels>
+      </Format>
+    </StreamFormats>
+  </Device>
+</FreeBoBConnectionInfo>
